--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1, maximum-scale=1.4, user-scalable=no, shrink-to-fit=no"
-    />
-
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1, maximum-scale=1.4, user-scalable=no, shrink-to-fit=no" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-
+    <link rel="stylesheet" href="./examples/style.css" />
   </head>
 
   <body>
-    <div id="app"></div>
-    <script type="module" src="./src/example.ts"></script>
+    <script type="module" src="./examples/kitchen-sink.ts"></script>
   </body>
 </html>
