optional templates, item classes, docs

--- a/examples/unstructured-list/index.html
+++ b/examples/unstructured-list/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1, maximum-scale=1.4, user-scalable=no, shrink-to-fit=no" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <link rel="stylesheet" href="./examples/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
-    <script type="module" src="./examples/kitchen-sink.ts"></script>
+    <script type="module" src="./main.ts"></script>
   </body>
 </html>
+
